feat: new endpoint /me and related swagger
